Wed Nov 14 08:47:48 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 1.0.1 release :-(
	* Remove an unnecessary (harmful) "#define hash" in windows' config.h
	
Tue Nov 13 15:15:46 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 1.0 release!  We are now out of beta.
	* Clean up Makefile awk script to be more readable (csilvers)
	* Namespace fixes: use fewer #defines, move typedefs into namespace
	
Fri Oct 12 12:35:24 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 0.9.1 release
	* Fix Makefile awk script to work on more architectures (csilvers)
	* Add test to test code in more 'real life' situations (csilvers)

Tue Oct  9 14:15:21 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 0.9 release
	* More type-hygiene improvements, especially for 64-bit (csilvers)
	* Some configure improvements to improve portability, utility (austern)
	* Small bugfix for operator== for dense_hash_map (jeff)

Tue Jul  3 12:55:04 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 0.8 release
	* Minor type-hygiene improvements: size_t for int, etc. (csilvers)
	* Porting improvements: tests pass on OS X, FreeBSD, Solaris (csilvers)
	* Full windows port!  VS solution provided for all unittests (csilvers)

Mon Jun 11 11:33:41 2007  Google Inc. <opensource@google.com>

	* sparsehash: version 0.7 release
	* Syntax fixes to better support gcc 4.3 and VC++ 7 (mec, csilvers)
	* Improved windows/VC++ support (see README.windows) (csilvers)
	* Config improvements: better tcmalloc support and config.h (csilvers)
	* More robust with missing hash_map + nix 'trampoline' .h's (csilvers)
	* Support for STLport's hash_map/hash_fun locations (csilvers)
	* Add .m4 files to distribution; now all source is there (csilvers)
	* Tiny modification of shrink-threshhold to allow never-shrinking (amc)
	* Protect timing tests against aggressive optimizers (csilvers)
	* Extend time_hash_map to test bigger objects (csilvers)