@@ -1,3 +1,8 @@
+Thu Nov 29 11:44:38 2007  Google Inc. <opensource@google.com>
+
+	* sparsehash: version 1.0.2 release
+	* Fix a final reference to hash<> to use SPARSEHASH_HASH<> instead.
+	
 Wed Nov 14 08:47:48 2007  Google Inc. <opensource@google.com>
 
 	* sparsehash: version 1.0.1 release :-(
